chore: domain 수정 및 `init.sql`, `data.sql` 작성

--- a/spring-skillary-back/Dockerfile.dev
+++ b/spring-skillary-back/Dockerfile.dev
@@ -19,4 +19,4 @@ RUN ./gradlew compileJava --no-daemon || true
 EXPOSE 8080
 
 # 5. DevTools로 실행
-CMD ["./gradlew", "bootRun"]
+CMD ["./gradlew", "bootRun", "--no-daemon"]
