--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy docker-compose.yml
-        uses: appleboy/scp-action@v4
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
@@ -22,7 +22,7 @@ jobs:
           target: "/app"
 
       - name: Write .env.* files
-        uses: seonghun120614/Skillary@v2
+        uses: nmhyrhn/Skillary@v0.1.7
         with:
           host: ${{ secrets.EC2_HOST }}
           user: ${{ secrets.EC2_USERNAME }}
