--- a/spring-skillary-back/src/main/resources/application.yml
+++ b/spring-skillary-back/src/main/resources/application.yml
@@ -18,3 +18,7 @@ app:
     from: ${APP_MAIL_FROM:no-reply@example.com}
     subject: ${APP_MAIL_SUBJECT:Skillary 이메일 인증 코드}
     code-expiry-minutes: ${APP_MAIL_CODE_EXPIRY_MINUTES:10}
+  jwt:
+    secret: ${APP_JWT_SECRET:change-this-secret-to-a-long-random-value}
+    access-expiry-minutes: ${APP_JWT_ACCESS_EXPIRY_MINUTES:30}
+    refresh-expiry-days: ${APP_JWT_REFRESH_EXPIRY_DAYS:30}
