refactor: 회원 부분 합치고 리팩토링

--- a/spring-skillary-back/.env.dev
+++ b/spring-skillary-back/.env.dev
@@ -3,7 +3,7 @@ SPRING_DATASOURCE_USERNAME=test
 SPRING_DATASOURCE_PASSWORD=1234
 SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
 
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost
+CORS_ALLOWED_ORIGINS=http://localhost:3000, http://localhost:8080, http://localhost
 
 SPRING_JPA_HIBERNATE_DDL_AUTO=create
 SPRING_JPA_SHOW_SQL=true
@@ -13,3 +13,16 @@ SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQLDialect
 SPRING_DEVTOOLS_RESTART_ENABLED=true
 
 SPRING_PROFILES_ACTIVE=dev
+
+SPRING_MAIL_HOST=smtp.gmail.com
+SPRING_MAIL_PORT=587
+SPRING_MAIL_USERNAME=gbs06193@gmail.com
+SPRING_MAIL_PASSWORD=inulvgeyzeyddlpz
+
+APP_MAIL_FROM=noreply@skillary.com
+APP_MAIL_SUBJECT=Skillary 이메일 인증 코드
+APP_MAIL_CODE_EXPIRY_MINUTES=300
+
+JWT_SECRET_KEY=this-is-very-secret-key-for-jwt-signing-please-change-it
+JWT_EXPIRE_TIME_ACCESS=180000
+JWT_EXPIRE_TIME_REFRESH=604800
