--- a/next-skillary-front/package.json
+++ b/next-skillary-front/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^15",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "^15"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "25.0.7",
+    "@types/react": "19.2.8",
+    "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "^15",
     "postcss": "^8",
-    "tailwindcss": "^3",
-    "autoprefixer": "^10"
+    "tailwindcss": "^3"
   }
 }
