--- a/spring-skillary-back/src/main/resources/application.yml
+++ b/spring-skillary-back/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
     application:
         name: spring-skillary-back
     mail:
-      host: ${SPRING_MAIL_HOST:smtp.example.com}
-      port: ${SPRING_MAIL_PORT:587}
-      username: ${SPRING_MAIL_USERNAME:}
-      password: ${SPRING_MAIL_PASSWORD:}
+      host: ${SPRING_MAIL_HOST}
+      port: ${SPRING_MAIL_PORT}
+      username: ${SPRING_MAIL_USERNAME}
+      password: ${SPRING_MAIL_PASSWORD}
       properties:
         mail:
           smtp:
@@ -15,10 +15,12 @@ spring:
 
 app:
   mail:
-    from: ${APP_MAIL_FROM:no-reply@example.com}
-    subject: ${APP_MAIL_SUBJECT:Skillary 이메일 인증 코드}
-    code-expiry-minutes: ${APP_MAIL_CODE_EXPIRY_MINUTES:1000}
+    from: ${APP_MAIL_FROM}
+    subject: ${APP_MAIL_SUBJECT}
+    code-expiry-minutes: ${APP_MAIL_CODE_EXPIRY_MINUTES}
+
   jwt:
-    secret: ${APP_JWT_SECRET:change-this-secret-to-a-long-random-value}
-    access-expiry-minutes: ${APP_JWT_ACCESS_EXPIRY_MINUTES:3000}
-    refresh-expiry-days: ${APP_JWT_REFRESH_EXPIRY_DAYS:3000}
+    secret: ${JWT_SECRET_KEY}
+    expire-time:
+      access: ${JWT_EXPIRE_TIME_ACCESS}
+      refresh: ${JWT_EXPIRE_TIME_REFRESH}
