chore : .env.dev aws s3 값입력 부분 삽입

--- a/spring-skillary-back/.env.dev
+++ b/spring-skillary-back/.env.dev
@@ -26,3 +26,9 @@ APP_MAIL_CODE_EXPIRY_MINUTES=300
 JWT_SECRET_KEY=this-is-very-secret-key-for-jwt-signing-please-change-it
 JWT_EXPIRE_TIME_ACCESS=180000
 JWT_EXPIRE_TIME_REFRESH=604800
+
+# AWS S3 설정 (노션 - 팀 공유문서 확인해서 넣어주세요. 넣고 커밋 x !)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_BUCKET_NAME=skillary-s3
+AWS_S3_REGION=ap-northeast-2
