--- a/next-skillary-front/package.json
+++ b/next-skillary-front/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.2",
+    "dompurify": "^3.3.1",
     "next": "^15",
     "react": "^18",
     "react-dom": "^18"
