--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -44,20 +44,36 @@ jobs:
             SPRING_DATASOURCE_USERNAME=${{ secrets.MYSQL_USER }}
             SPRING_DATASOURCE_PASSWORD=${{ secrets.MYSQL_PASSWORD }}
             SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
+
             CORS_ALLOWED_ORIGINS=${{ secrets.CORS_ALLOWED_ORIGINS }}
+
             SPRING_JPA_HIBERNATE_DDL_AUTO=validate
             SPRING_JPA_SHOW_SQL=false
             SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL=false
             SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQLDialect
+
             SPRING_PROFILES_ACTIVE=prod
-            JWT_ACCESS_SECRET_KEY=${{ secrets.JWT_ACCESS_SECRET_KEY }}
-            JWT_REFRESH_SECRET_KEY=${{ secrets.JWT_REFRESH_SECRET_KEY }}
-            JWT_ACCESS_EXPIRATION_MS=${{ secrets.JWT_ACCESS_EXPIRATION_MS }}
-            JWT_REFRESH_EXPIRATION_MS=${{ secrets.JWT_REFRESH_EXPIRATION_MS }}
+
+            JWT_SECRET_KEY=${{ JWT_SECRET_KEY }}
+            JWT_EXPIRE_TIME_ACCESS=180000
+            JWT_EXPIRE_TIME_REFRESH=604800
+
             AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_S3_BUCKET_NAME=${{ secrets.AWS_S3_BUCKET_NAME }}
             AWS_S3_REGION=${{ secrets.AWS_S3_REGION }}
+
+            TOSS_PAYMENTS_SECRET_KEY=${{ secrets.TOSS_PAYMENTS_SECRET_KEY }}
+            TOSS_PAYMENTS_CLIENT_KEY=${{ secrets.TOSS_PAYMENTS_CLIENT_KEY }}
+
+            SPRING_MAIL_HOST=smtp.gmail.com
+            SPRING_MAIL_PORT=${{ secrets.SPRING_MAIL_PORT }}
+            SPRING_MAIL_USERNAME=${{ secrets.SPRING_MAIL_USERNAME }}
+            SPRING_MAIL_PASSWORD=${{ SPRING_MAIL_PASSWORD }}
+
+            APP_MAIL_FROM=noreply@skillary.com
+            APP_MAIL_SUBJECT=Skillary 이메일 인증 코드
+            APP_MAIL_CODE_EXPIRY_MINUTES=300
             EOF
             echo "Back 환경 설정 완료!"
 
