--- a/spring-skillary-back/.env.dev
+++ b/spring-skillary-back/.env.dev
@@ -3,7 +3,7 @@ SPRING_DATASOURCE_USERNAME=test
 SPRING_DATASOURCE_PASSWORD=1234
 SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver
 
-CORS_ALLOWED_ORIGINS=http://localhost:3000, http://localhost:8080, http://localhost
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost
 
 SPRING_JPA_HIBERNATE_DDL_AUTO=create
 SPRING_JPA_SHOW_SQL=true
